[package]
name = "verkle"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
bytes = "1"
ark-ff = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"

ark-bls12-381 = "0.4"
ark-ec = "0.4"

ark-poly = { version = "0.4", features = ["parallel"] }
ark-poly-commit = "0.4"

blake2 = "0.10"
rand = "0.8"

[dev-dependencies]
rand = "0.8"
