[package]
name = "verkle"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
bytes = "1"
ark-ff = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"

ark-bls12-381 = "0.5"
ark-ec = "0.5"

ark-poly = { version = "0.5", features = ["parallel"] }
ark-poly-commit = "0.5"

rand = "0.8"

[dev-dependencies]
rand = "0.8"
